force-app/main/default/objects/Centuri_Outbound_Notification__c/Centuri_Outbound_Notification__c.object-meta.xml
<CustomObject>
    <label>Centuri Outbound Notification</label>
    <nameField>
        <displayFormat>INT-{00000}</displayFormat>
        <label>Centuri Outbound Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Centuri Outbound Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>