force-app/main/default/objects/Centuri_Outbound_Notification__c/fields/Clock_Event_Record__c.field-meta.xml
<CustomField>
    <fullName>Clock_Event_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Points to the Clock Event for which the Outbound notification was generated(This field was created for NPL MA).</description>
    <label>Clock Event Record</label>
    <referenceTo>TimesheetClockEvent__c</referenceTo>
    <relationshipLabel>Centuri Outbound Notifications</relationshipLabel>
    <relationshipName>Centuri_Outbound_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>