force-app/main/default/objects/Centuri_Outbound_Notification__c/fields/DestinationType__c.field-meta.xml
<CustomField>
    <fullName>DestinationType__c</fullName>
    <description>The Integration Destination(This field was created for NPL MA).</description>
    <label>Destination Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>