force-app/main/default/objects/Centuri_Outbound_Notification__c/fields/Equipment_Record__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Points to the Equipment record for which the Outbound notification was generated(This field was created for NPL MA).</description>
    <label>Equipment Record</label>
    <referenceTo>Timesheet_Equipment_Entry__c</referenceTo>
    <relationshipLabel>Centuri Outbound Notifications</relationshipLabel>
    <relationshipName>Centuri_Outbound_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>