force-app/main/default/objects/Centuri_Outbound_Notification__c/fields/ExceptionMessage__c.field-meta.xml
<CustomField>
    <fullName>ExceptionMessage__c</fullName>
    <description>Failures will be recorded here sent by integration(This field was created for NPL MA).</description>
    <label>Exception Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>