force-app/main/default/objects/Centuri_Outbound_Notification__c/fields/ExceptionType__c.field-meta.xml
<CustomField>
    <fullName>ExceptionType__c</fullName>
    <description>Type of Exception(This field was created for NPL MA).</description>
    <label>Exception Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>