force-app/main/default/objects/Centuri_Outbound_Notification__c/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <description>Unique External ID(This field was created for NPL MA).</description>
    <externalId>true</externalId>
    <label>ExternalID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>