force-app/main/default/objects/Centuri_Outbound_Notification__c/fields/ExternalIdFieldName__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdFieldName__c</fullName>
    <description>(This field was created for NPL MA).</description>
    <label>ExternalIdFieldName</label>
    <length>64</length>
    <type>Text</type>
</CustomField>