force-app/main/default/objects/Centuri_Outbound_Notification__c/fields/IntegrationState__c.field-meta.xml
<CustomField>
    <fullName>IntegrationState__c</fullName>
    <description>Integration Status such as Success,Failure or Pending(This field was created for NPL MA).</description>
    <label>Integration State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>