force-app/main/default/objects/Centuri_Outbound_Notification__c/fields/IsObjectDeleted__c.field-meta.xml
<CustomField>
    <fullName>IsObjectDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to check if timesheet related objects is deleted(This field was created for NPL MA).</description>
    <label>IsObjectDeleted?</label>
    <type>Checkbox</type>
</CustomField>