force-app/main/default/objects/Centuri_Outbound_Notification__c/fields/LockoutDate__c.field-meta.xml
<CustomField>
    <fullName>LockoutDate__c</fullName>
    <description>The date represents the lock out date from LockTime object(This field was created for NPL MA).</description>
    <formula>DATEVALUE(
				IF(!ISBLANK(ParentTimesheet__r.LockoutDateTime__c ),
													ParentTimesheet__r.LockoutDateTime__c, 
													ParentTimesheet__r.Default_LockoutDate_Time__c )
)</formula>
    <label>LockoutDate</label>
    <type>Date</type>
</CustomField>