force-app/main/default/objects/Centuri_Outbound_Notification__c/fields/LockoutDateInPast__c.field-meta.xml
<CustomField>
    <fullName>LockoutDateInPast__c</fullName>
    <description>flag to check if lock out date is in past(This field was created for NPL MA).</description>
    <formula>LockoutDate__c &lt; TODAY()</formula>
    <label>LockoutDateInPast</label>
    <type>Checkbox</type>
</CustomField>