force-app/main/default/objects/Centuri_Outbound_Notification__c/fields/Notes_Record__c.field-meta.xml
<CustomField>
    <fullName>Notes_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Points to the Notes record for which the Outbound notification was generated(This field was created for NPL MA).</description>
    <label>Notes Record</label>
    <referenceTo>TimesheetEntryNotes__c</referenceTo>
    <relationshipLabel>Centuri Outbound Notifications</relationshipLabel>
    <relationshipName>Centuri_Outbound_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>