force-app/main/default/objects/Centuri_Outbound_Notification__c/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <description>Name of the Object for which the Outbound notification was generated(This field was created for NPL MA).</description>
    <label>Object Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>