force-app/main/default/objects/Centuri_Outbound_Notification__c/fields/ParentTimesheet__c.field-meta.xml
<CustomField>
    <fullName>ParentTimesheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent timesheet record(This field was created for NPL MA).</description>
    <label>ParentTimesheet</label>
    <referenceTo>Diab_Timesheet__c</referenceTo>
    <relationshipLabel>Centuri Outbound Notifications</relationshipLabel>
    <relationshipName>Centuri_Outbound_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>