force-app/main/default/objects/Centuri_Outbound_Notification__c/fields/ReadyForPurge__c.field-meta.xml
<CustomField>
    <fullName>ReadyForPurge__c</fullName>
    <description>flag to check If the record is ready to be purged(This field was created for NPL MA).</description>
    <formula>IF(LockoutDate__c &lt;= TODAY()-10,true,false)</formula>
    <label>ReadyForPurge?</label>
    <type>Checkbox</type>
</CustomField>