force-app/main/default/objects/Centuri_Outbound_Notification__c/fields/RecordDaysToDeleteCheck__c.field-meta.xml
<CustomField>
    <fullName>RecordDaysToDeleteCheck__c</fullName>
    <description>Record the number of days left to delete(This field was created for NPL MA).</description>
    <formula>IF (  CreatedDate  &lt;  DATETIMEVALUE( TODAY() ) - 20, True, False )</formula>
    <label>RecordDaysToDeleteCheck</label>
    <type>Checkbox</type>
</CustomField>