force-app/main/default/objects/Centuri_Outbound_Notification__c/fields/RecordKey__c.field-meta.xml
<CustomField>
    <fullName>RecordKey__c</fullName>
    <description>Key of the Object for which the outbound notificationis generated(This field was created for NPL MA).</description>
    <label>Record Key</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>