force-app/main/default/objects/Centuri_Outbound_Notification__c/fields/RecreateonUpdate__c.field-meta.xml
<CustomField>
    <fullName>RecreateonUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to check if this was record was recreated after a update(This field was created for NPL MA).</description>
    <label>Recreate on Update</label>
    <type>Checkbox</type>
</CustomField>