force-app/main/default/objects/Centuri_Outbound_Notification__c/fields/SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem__c</fullName>
    <description>Source System which generated the Outbound notification(This field was created for NPL MA).</description>
    <label>Source System</label>
    <length>64</length>
    <type>Text</type>
</CustomField>