force-app/main/default/objects/Centuri_Outbound_Notification__c/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <description>Detailed Exception error(This field was created for NPL MA).</description>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>