force-app/main/default/objects/Centuri_Outbound_Notification__c/fields/Timesheet_Entry_Record__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Entry_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Points to the Timesheet record for which the Outbound notification was generated(This field was created for NPL MA).</description>
    <label>Timesheet Entry Record</label>
    <referenceTo>Diab_Timesheet_Entry__c</referenceTo>
    <relationshipLabel>Centuri Outbound Notifications</relationshipLabel>
    <relationshipName>Centuri_Outbound_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>