force-app/main/default/objects/Centuri_Outbound_Notification__c/fields/Warning__c.field-meta.xml
<CustomField>
    <fullName>Warning__c</fullName>
    <defaultValue>&quot;The selected records will be resent.&quot;</defaultValue>
    <description>Used by Mule(This field was created for NPL MA).</description>
    <label>Warning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>