force-app/main/default/objects/Centuri_Outbound_Notification__c/fields/WBS_Cost_Center_Updated__c.field-meta.xml
<CustomField>
    <fullName>WBS_Cost_Center_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BA: NPLMA - Used to trigger another push to SAP after a delete call is made when WBS/CC is changed on a equipment timesheet entry.</description>
    <label>WBS/Cost Center Updated?</label>
    <type>Checkbox</type>
</CustomField>