force-app/main/default/objects/Centuri_Outbound_Notification__c/validationRules/Abort_Changes_post_Lockout.validationRule-meta.xml
<ValidationRule>
    <fullName>Abort_Changes_post_Lockout</fullName>
    <active>true</active>
    <description>The Outbound notification must not be updated after lock time.</description>
    <errorConditionFormula>AND(LockoutDateInPast__c ,
  							AND(
													ISCHANGED(IntegrationState__c),
													ISPICKVAL(IntegrationState__c, &quot;New&quot;)
            )
				)</errorConditionFormula>
    <errorMessage>The Outbound notification must not be updated after lock time.</errorMessage>
</ValidationRule>