force-app/main/default/objects/Centuri_Outbound_Notification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsObjectDeleted__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ObjectName__c</columns>
    <columns>IntegrationState__c</columns>
    <columns>ExternalID__c</columns>
    <columns>ExceptionType__c</columns>
    <columns>ExceptionMessage__c</columns>
    <columns>ParentTimesheet__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>