force-app/main/default/objects/Centuri_Outbound_Notification__c/listViews/Created_or_Updated_in_last_30m.listView-meta.xml
<ListView>
    <fullName>Created_or_Updated_in_last_30m</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ObjectName__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>IntegrationState__c</columns>
    <columns>LockoutDate__c</columns>
    <columns>ReadyForPurge__c</columns>
    <columns>Timesheet_Entry_Record__c</columns>
    <columns>ParentTimesheet__c</columns>
    <columns>ExternalID__c</columns>
    <columns>ExceptionType__c</columns>
    <columns>ExceptionMessage__c</columns>
    <filterScope>Everything</filterScope>
    <label>Created or Updated in last 30m</label>
</ListView>