force-app/main/default/objects/Centuri_Outbound_Notification__c/listViews/Equipment_Failed_Outgoing_Messages.listView-meta.xml
<ListView>
    <fullName>Equipment_Failed_Outgoing_Messages</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ObjectName__c</columns>
    <columns>SourceSystem__c</columns>
    <columns>Equipment_Record__c</columns>
    <columns>ExceptionMessage__c</columns>
    <columns>ExceptionType__c</columns>
    <columns>IsObjectDeleted__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IntegrationState__c</field>
        <operation>equals</operation>
        <value>Failure</value>
    </filters>
    <filters>
        <field>ObjectName__c</field>
        <operation>equals</operation>
        <value>Timesheet_Equipment_Entry__c</value>
    </filters>
    <filters>
        <field>LockoutDateInPast__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Equipment - Failed Outgoing Messages</label>
</ListView>