force-app/main/default/objects/Centuri_Outbound_Notification__c/listViews/Failed_Outgoing_Messages.listView-meta.xml
<ListView>
    <fullName>Failed_Outgoing_Messages</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ObjectName__c</columns>
    <columns>SourceSystem__c</columns>
    <columns>Timesheet_Entry_Record__c</columns>
    <columns>ExceptionMessage__c</columns>
    <columns>ExceptionType__c</columns>
    <columns>IsObjectDeleted__c</columns>
    <columns>IntegrationState__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IntegrationState__c</field>
        <operation>equals</operation>
        <value>Failure</value>
    </filters>
    <filters>
        <field>ObjectName__c</field>
        <operation>equals</operation>
        <value>Diab_Timesheet_Entry__c</value>
    </filters>
    <label>Time Entry - Failed Outgoing Messages</label>
</ListView>